--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-2 col-3 logo">
+          <div class="col-md-2 col-3" style="height:120px; background-color:red;">
             <h4 style="color:white;text-align:center;">Logo</h4>
           </div>
           <div class="col-md-10 col-9" style="height:120px; background-color:yellow;">
